small layout changes on medium size and small screens to stop titles from overlapping with profile image

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ nav * {
 }
 
 .landing-left-bottom {
-  grid-column: 1 / span 2;
+  grid-column: 1;
   grid-row: 2;
   margin-left: 0;
   align-self: center;
@@ -217,7 +217,7 @@ nav * {
 .landing-right {
   justify-self: center;
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 1 / span 2;
 
   position: relative;
   display: flex;
@@ -251,7 +251,7 @@ nav * {
   flex-direction: column;
   gap: 10%;
   position: absolute;
-  bottom: 10%;
+  bottom: 0;
   z-index: 100;
   font-size: 1em;
 }
